[project]
name = "qm-buildings"
version = "0.1.0"
description = "Tool for managing two spatial databases"
authors = [
    {name = "Stefan Moser",email = "stefanmoser1991@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "geoalchemy2 (>=0.18.0,<0.19.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
