[project]
name = "qm-buildings"
version = "0.2.0"
description = "Tool for managing two spatial databases"
authors = [
    {name = "Stefan Moser",email = "stefanmoser1991@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "geoalchemy2[shapely] (>=0.18.0,<0.19.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
omit = [
    "src/qm_buildings/engine_setup.py",
    "src/qm_buildings/__main__.py",
    "src/qm_buildings/models.py"
]